--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,15 @@ body{
   padding-top: 100px;
 }
 
-.container{
-  width: 1200px;
+.large-container{
+  width: 1300px;
   margin: 0 auto;
 }
 
+.small-container{
+  width: 900px;
+  margin: 0 auto;
+}
 ul{
   list-style-type: none;
 }
@@ -76,6 +80,38 @@ ul{
   justify-content: flex-end;
 }
 
+/*! Header */
+header{
+  padding-top: 50px;
+  background-color: #B4D0E7;
+  height: 800px;
+}
+
+header .titolo{
+  min-height: 200px;
+  background-color: blue;
+}
+
+/** jumbotron */
+header .jumbotron{
+  display: flex;
+  background-color: pink;
+}
+
+.jumbotron .small-col{
+  flex-basis: 30%;
+
+  height: 500px;
+  background-color: red;
+}
+
+.jumbotron .large-col{
+  flex-basis: 70%;
+
+  height: 500px;
+  background-color: greenyellow;
+
+}
 /*!  utilities*/
 .border{
   border: 1px dashed black;
