--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-/* CSS Reset */
+/*! CSS Reset */
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-/* General */
+/*! General */
 body{
   font-family: 'Open Sans', sans-serif;
   padding-top: 100px;
@@ -20,8 +20,39 @@ body{
   width: 1000px;
   margin: 0 auto;
 }
+
 ul{
   list-style-type: none;
+}
+
+.small-col{
+  flex-basis: 30%;
+
+  height: 500px;
+  background-color: red;
+}
+
+.large-col{
+  flex-basis: 70%;
+
+  height: 500px;
+  background-color: greenyellow;
+
+}
+.card{
+  min-height: 300px;
+  background-color: darkgoldenrod;
+}
+
+section{
+  margin-top: 100px;
+}
+
+.title{
+  margin-bottom: 70px;
+
+  min-height: 50px;
+  background-color: blueviolet;
 }
 
 /*! Navbar Fixed */
@@ -92,24 +123,7 @@ header .main-title{
 }
 
 /** jumbotron */
-header .jumbotron{
-  background-color: pink;
-}
 
-.jumbotron .small-col{
-  flex-basis: 30%;
-
-  height: 500px;
-  background-color: red;
-}
-
-.jumbotron .large-col{
-  flex-basis: 70%;
-
-  height: 500px;
-  background-color: greenyellow;
-
-}
 
 /*! Main */
 /** Tariffs */
@@ -124,16 +138,82 @@ header .jumbotron{
   background-color: darkorange;
 }
 
-/** Tariffs Cards  */
+/*? Tariffs Cards  */
 .tariff-card{
   display: flex;
   justify-content: space-between;
+  margin: 50px 0;
 }
 
 .tariff-card .card{
-  min-height: 600px;
-  background-color: darkgoldenrod;
   width: 300px;
+}
+
+/** Contact */
+
+/** Partner */
+.partner .large-col{
+  flex-basis: 60%;
+}
+
+.partner .small-col{
+  flex-basis: 40%;
+}
+
+/** Description */
+.description-row{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.description-col{
+  flex-basis: calc((100% - 40px) / 3);
+
+  background-color: darkcyan;
+  min-height: 300px;
+}
+
+/** Client */
+.client .designit{
+  display: flex;
+}
+
+.client .square-col{
+  flex-basis: calc(100% / 3);
+
+  min-height: 500px;
+}
+
+/*? Show Partner */
+.partner-box{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.partner-box .show-partner{
+  flex-basis: 50%;
+  
+  background-color: aqua;
+}
+
+
+/** Try For Free */
+.bg-try-free{
+  background-color: #B4D0E7;
+  margin: 0;
+}
+
+.try-free{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/** FAQ */
+.FAQ{
+  min-height: 500px;
+  background-color: red;
 }
 
 /*!  utilities*/
@@ -149,6 +229,6 @@ header .jumbotron{
   padding-top: 50px;
 }
 
-.m-top-100{
-  margin-top: 100px;
+.m-top-50{
+  margin-top: 50px;
 }
