--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ section{
 .title{
   margin-bottom: 50px;
   font-size: 38px;
-  font-weight: 700;
 }
 
 /*! Buttons */
@@ -274,14 +273,25 @@ header{
 .description-row{
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 40px;
 }
 
 .description-col{
-  flex-basis: calc((100% - 40px) / 3);
+  flex-basis: calc((100% - 80px) / 3);
+}
 
-  background-color: darkcyan;
-  min-height: 300px;
+.description-col img{
+  max-width: 100%;
+  display: block;
+}
+
+.description-col h3{
+  font-size: 1.5rem;
+  margin-bottom: 25px;
+}
+
+.description-col p{
+  font-weight: 500;
 }
 
 /** Client */
