--- a/css/style.css
+++ b/css/style.css
@@ -423,27 +423,35 @@ footer{
   margin-top: 150px;
   background-color: black;
   color: white;
+  padding-top: 100px;
+  padding-bottom: 50px;
 }
 
 /** Footer Top */
 .footer-top{
   display: flex;
   gap: 50px;
+  margin-bottom: 100px;
 }
 
 .footer-top .foot-col{
   flex-basis: calc((100% - 100px) / 5);
+}
 
-  min-height: 300px;
-  background-color: white;
+.foot-col h5{
+  font-size: 1.5rem;
+  margin-bottom: 30px;
+}
+
+.foot-col li{
+  margin-bottom: 15px;
 }
 
 /** Footer Bottom */
-.footer-bottom{
-  min-height: 200px;
-  border: 1px dashed white;
+.select-lenguage>span{
+  margin: 0 5px;
+  font-weight: 100;
 }
-
 
 /*!  utilities*/
 .border{
@@ -483,8 +491,14 @@ footer{
   color: black;
 }
 
+.separator-10{
+  border-top: 1px solid lightgray;
+  width: 10%;
+  margin: 40px 0;
+}
+
 .separator-20{
-  border: 1px solid lightgray;
+  border-top: 1px solid lightgray;
   width: 20%;
   margin: 40px 0;
 }
