--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,10 @@ ul{
 .large-col{
   flex-basis: 70%;
 }
+
 .card{
   border: 1px solid gray;
+  font-size: 14px;
 }
 
 section{
@@ -85,6 +87,8 @@ section{
 /*! Navbar Fixed */
 .navbar-fixed{
   display: flex;
+  justify-content: space-between;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -101,29 +105,38 @@ section{
   height: 100%;
 }
 
-
-/** Navbar left */
-.navbar-left{
-  flex: 0 0 50%;
-  display: flex;
-  align-items: center;
-}
-
-.navbar-left>nav{
-  flex-grow: 1;
-  height: 100%;
-}
-
 .navbar-fixed li{
   margin-left: 30px;
   line-height: 90px;
   height: 100%;
 }
 
-/** Functions */
+.navbar-fixed nav{
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+/** Navbar left */
+.navbar-left{
+  display: flex;
+  align-items: center;
+}
 
+#logo{
+  height: 25px;
+}
+
+/** Navbar right */
+
+.navbar-right .log-in{
+  margin-left: 30px;
+  display: flex;
+  align-items: center;
+}
+
+/** Functions */
 .navbar-fixed li:hover{
-  box-shadow: 0 5px blue;
+  border-bottom: 5px solid blue;
   color: blue;
 }
 
@@ -132,32 +145,9 @@ section{
   transform: translateY(2px);
 }
 
-/** Navbar right */
-.navbar-right{
-  flex: 0 0 50%;
-  display: flex;
-  align-items: center;
-  height: 100%;
-}
-
-.navbar-right>nav{
-  display: flex;
-  justify-content: flex-end;
-  flex-grow: 1;
-  height: 100%;
-}
-
-.navbar-right .log-in{
-  margin-left: 30px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
 /*! Header */
 header{
   background-color: #B4D0E7;
-  padding-top: 90px;
 }
 
 #main-title{
@@ -168,32 +158,35 @@ header{
 
 /** jumbotron */
 /*? Small Col */
+.jumbotron{
+  position: relative;
+  top: 100px;
+  margin-bottom: 100px;
+}
+
 .jumbotron .free-trial{
   display: inline-block;
   margin: 30px 0;
 }
 
-.jumbotron .fa-arrow-down{
-  margin-bottom: 25px;
+.jumbotron .arrow-down{
+  text-decoration: none;
+  color: currentColor;
+}
+
+/*? Funcions */
+.jumbotron .arrow-down:hover{
+  text-shadow: 0px 10px 7px black;
+  transition: 500ms;
 }
 
 /*? Large Col */
-.jumbotron .large-col{
-  position: relative;
-}
-
-.jumbotron .large-col img{
-  width: 95%;
-  position: absolute;
-  top: 0;
+.jumbotron img{
+  width: 100%;
 }
 
 /*! Main */
 /** Tariffs */
-.tariff{
-  margin-top: 150px;
-}
-
 .choice{
   font-size: 15px;
 }
@@ -222,8 +215,6 @@ header{
   display: flex;
   justify-content: space-between;
   margin: 50px 0;
-
-  font-size: 14px;
 }
 
 .tariff-card .card{
@@ -242,18 +233,9 @@ header{
   padding: 30px 30px;
 }
 
-.main-card>h3{
+.main-card h3{
   margin-bottom: 20px;
   font-size: 25px;
-}
-
-.tariff-price>span{
-  display: inline-block;
-  margin-bottom: 10px;
-}
-
-.details>*{
-  margin-bottom: 15px;
 }
 
 .fa-ul {
@@ -267,36 +249,32 @@ header{
 }
 
 /** Partner */
-.partner{
-  display: flex;
-}
 /* ? Large col */
-.partner .large-col{
+#partner .large-col{
   flex-basis: 60%;
 }
 
 .partner-img{
   max-width: 100%;
-  display: block;
 }
 
 /* ? Small col */
-.partner .small-col{
+#partner .small-col{
   flex-basis: 40%;
   padding: 50px 30px;
 }
 
-.partner h3{
+#partner h3{
   font-size: 1.5rem;
 }
 
-.partner p{
+#partner p{
   margin: 20px 0;
   font-weight: 500;
   font-size: 17px;
 }
 
-.partner .button{
+#partner .button{
   display: inline-block;
   margin: 15px 0;
   border: 1px solid black;
@@ -328,16 +306,16 @@ header{
 }
 
 /** Client */
-.client .title{
+#client .title{
   width: 60%;
 }
 
-.client .layout-square{
+#client .layout-square{
   display: flex;
   margin-top: 150px;
 }
 
-.client .square-col{
+#client .square-col{
   flex-basis: calc(100% / 3);
   display: flex;
   flex-wrap: wrap;
@@ -398,7 +376,7 @@ header{
 }
 
 /*? Middle Square */
-.client .square-col.middle{
+#client .square-col.middle{
   flex-direction: column;
   padding: 40px;
   background-color: #F5F5F5;
@@ -410,14 +388,13 @@ header{
 
 
 /** Try For Free */
-.bg-try-free{
+#bg-try-free{
   background-color: #B4D0E7;
   margin: 0;
 }
 
 .try-free{
   display: flex;
-  justify-content: center;
   align-items: baseline;
 
   padding: 100px 0;
@@ -491,7 +468,7 @@ footer{
 }
 
 .footer-top .foot-col{
-  flex-basis: calc((100% - 100px) / 5);
+  flex-basis: calc((100% - 200px) / 5);
 }
 
 .foot-col h5{
@@ -520,10 +497,6 @@ footer{
 
 
 /*!  utilities*/
-.border{
-  border: 1px dashed black;
-}
-
 .d-flex{
   display: flex;
 }
@@ -544,6 +517,14 @@ footer{
   margin: 25px 0;
 }
  
+.m-m{
+  margin: 50px 0;
+}
+
+.m-bottom-xs{
+  margin-bottom: 10px;
+}
+
 .m-bottom-m{
   margin-bottom: 50px;
 }
